bloquer debloquer okkk

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -63,7 +63,7 @@
 
 
     <div class="view-source mb-3">
-      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded">Deconnecxion</a>
     </div>
   </nav>
 </aside>
