--- a/src/app/components/sidebaradminp/sidebaradminp.component.html
+++ b/src/app/components/sidebaradminp/sidebaradminp.component.html
@@ -22,13 +22,13 @@
 
       <li>
         <a href="#" routerLink="/addpartanduser" routerLinkActive="active">
-          <i class="fas fa-money-check-alt"></i>
+          <i class="fas fa-users"></i>
           <span>Ajouter Admin ou User</span>
         </a>
       </li>
       <li>
           <a href="#" routerLink="/comptespartnaire" routerLinkActive="active">
-            <i class="fas fa-gem"></i>
+            <i class="fas fa-money-check"></i>
             <span> Compte</span>
           </a>
         </li>
@@ -42,7 +42,7 @@
     </ul>
 
     <div class="view-source mb-3">
-      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded">Deconnecxion</a>
     </div>
   </nav>
 </aside>
