--- a/src/app/depot/depot.component.html
+++ b/src/app/depot/depot.component.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Numero de Compte</label>
                   <input type="text" class="form-control  rounded" id="exampleFormControlInput1"
-                (keyup)="onsubmit($event)"  placeholder="Numero de Compte" ngModel #numerocompte name="numerocompte">
+                  placeholder="Numero de Compte" ngModel #numerocompte name="numerocompte">
                 </div>
 
                 <div class="form-group">
