--- a/src/app/addpartanduser/addpartanduser.component.html
+++ b/src/app/addpartanduser/addpartanduser.component.html
@@ -9,35 +9,35 @@
       <div class="row">
         <div class="col-md-12 mb-4 ">
 
-          <div class="card border-0 rounded-0">
+          <div class="card border-0 rounded">
             <div class="card-body">
               <form #imageForm=ngForm (ngSubmit)="onsubmit(imageForm.value)">
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Nom complet de l'Admine</label>
-                  <input type="name" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  <input type="name" class="form-control  rounded" id="exampleFormControlInput1"
                     placeholder="Nom complet de l'Admine" name="nom" ngModel>
                 </div>
 
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Telephone</label>
                   <input type="number" #telephone ngModel required="required" min=700000000 max=800000000
-                    name="telephone" class="form-control  rounded-0" id="exampleFormControlInput1"
+                    name="telephone" class="form-control  rounded" id="exampleFormControlInput1"
                     placeholder="Telephone" name="telephone">
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Email address</label>
-                  <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  <input type="email" class="form-control  rounded" id="exampleFormControlInput1"
                     placeholder="name@example.com" name="email" ngModel>
                 </div>
 
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Login</label>
                   <input type="text" #login ngModel required="required" name="login" class="form-control" id="username"
-                    class="form-control  rounded-0" placeholder="Login">
+                    class="form-control  rounded" placeholder="Login">
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Password</label>
-                  <input type="password" class="form-control  rounded-0" id="exampleFormControlInput1"
+                  <input type="password" class="form-control  rounded" id="exampleFormControlInput1"
                     placeholder="Password" name="password" ngModel>
                 </div>
 
@@ -58,13 +58,13 @@
                   <div class="custom-file">
                     <input input name="photo" #photo ngModel type="file" #Image accept="image/"
                       (change)="handleFileInput($event.target.files)" class="custom-file-input">
-                    <label class="custom-file-label rounded-0" for="customFile">Photo</label>
+                    <label class="custom-file-label rounded" for="customFile">Photo</label>
                   </div>
                 </div>
 
                 <div class="form-group">
                   <button type="submit" [disabled]="Image.value=='' || !imageForm.valid"
-                    class="btn btn-lightning rounded-0 mb-2 mr-2">Ajouter</button>
+                    class="btn btn-lightning rounded mb-2 mr-2">Ajouter</button>
                 </div>
               </form>
             </div>
