--- a/src/app/components/sidebaruser/sidebaruser.component.html
+++ b/src/app/components/sidebaruser/sidebaruser.component.html
@@ -28,19 +28,19 @@
       </li>
       <li>
         <a href="#" routerLink="/envoi" routerLinkActive="active">
-          <i class="fas fa-gem"></i>
+          <i class="fas fa-file-invoice-dollar"></i>
           <span>Envoi</span>
         </a>
       </li>
       <li>
           <a href="#" routerLink="/retrait" routerLinkActive="active">
-            <i class="fas fa-gem"></i>
+            <i class="fas fa-business-time"></i>
             <span>Retrait</span>
           </a>
         </li>
         <li>
           <a href="#" routerLink="/rembousement" routerLinkActive="active">
-            <i class="fas fa-gem"></i>
+            <i class="fas fa-search-dollar"></i>
             <span>Rembousement</span>
           </a>
         </li>
@@ -54,7 +54,7 @@
 
     </ul>
     <div class="view-source mb-3">
-      <a (click)="logOut()" class="btn btn-block btn-lightning rounded-0">Deconnecxion</a>
+      <a (click)="logOut()" class="btn btn-block btn-lightning rounded">Deconnecxion</a>
     </div>
   </nav>
 </aside>
