--- a/src/app/depot/depot.component.html
+++ b/src/app/depot/depot.component.html
@@ -4,11 +4,8 @@
     <app-sidebarcaissier></app-sidebarcaissier>
     <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
       <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
-
-
       <div class="row">
         <div class="col-md-12 mb-4 ">
-
           <div class="card border-0 rounded">
             <div class="card-body">
               <form #imageForm=ngForm (ngSubmit)="onsubmit(imageForm.value)">
@@ -17,12 +14,10 @@
                   <input type="text" class="form-control  rounded" id="exampleFormControlInput1"
                   placeholder="Numero de Compte" ngModel #numerocompte name="numerocompte">
                 </div>
-
                 <div class="form-group">
-                  <button type="submit" class="btn btn-lightning rounded-0 mb-2 mr-2">Recherchez un Compte</button>
+                  <button type="submit" class="btn btn-lightning rounded mb-2 mr-2">Recherchez un Compte</button>
                 </div>
               </form>
-
               <div *ngFor="let infocompte of infocompte">
                   <label for="exampleFormControlInput1">Information suplementaire du Compte</label>
                     <br>
@@ -42,12 +37,8 @@
                   <label for="exampleFormControlInput1">Ninea</label>
                   <input type="texte" class="form-control  rounded" value={{infocompte.partenaire.ninea}} disabled >
                 </div>
-
-
-
               </div>
               <div>
-
                 <form *ngFor="let infocompte of infocompte" #imageForm=ngForm (ngSubmit)="onsubmit1(imageForm.value)">
 
                   <div class="form-group" >
@@ -57,7 +48,7 @@
 
                     <input type="number" class="form-control  rounded" id="exampleFormControlInput1"   placeholder="000000 XOF" ngModel #montant name="montant" >
 
-                    <br> <br> <button type="submit" class="btn btn-lightning rounded-0 mb-2 mr-2">Valdez</button>
+                    <br> <br> <button type="submit" class="btn btn-lightning rounded mb-2 mr-2">Valdez</button>
                   </div>
 
                 </form>
