allouer un compte a un user okkkk

--- a/src/app/components/sidebaradminp/sidebaradminp.component.html
+++ b/src/app/components/sidebaradminp/sidebaradminp.component.html
@@ -39,6 +39,12 @@
         </a>
       </li>
 
+      <li>
+        <a href="#" routerLink="/aloueruncompte" routerLinkActive="active">
+          <i class="fa fa-table"></i>
+          <span>Alouer un Compte</span>
+        </a>
+      </li>
     </ul>
 
     <div class="view-source mb-3">
