--- a/src/app/adduser/adduser.component.html
+++ b/src/app/adduser/adduser.component.html
@@ -1,70 +1,7 @@
+<div class="content" #content>
+    <h1>BIENVENUE A DAARADJI TRANSFERT</h1>
+    <P>Qu'est-ce que le Lorem Ipsum?
+        Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</P>
+  </div>
 
-<div class="wrapper default-theme">
-  <app-navbar></app-navbar>
-  <main>
-    <app-sidebaradminp></app-sidebaradminp>
-    <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
-      <h4 class="mb-4 text-muted"> Ajouter un Super Admin ou Caissier</h4>
-
-
-  <div class="row">
-      <div class="col-md-12 mb-4 ">
-
-        <div class="card border-0 rounded-0">
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control  rounded-0" id="exampleFormControlInput1"
-                  placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label>Custom file input</label>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="customFile">
-                  <label class="custom-file-label rounded-0" for="customFile">Choose file</label>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
-                <select class="form-control rounded-0" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect2">Example multiple select</label>
-                <select multiple class="form-control rounded-0" id="exampleFormControlSelect2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-
-              <div class="form-group">
-                <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2">Submit</button>
-
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-      <router-outlet></router-outlet>
-      <hr>
-      <app-footer></app-footer>
-    </div>
-    <div class="overlay" ></div>
-  </main>
-</div>
-
+  <button (click)="downloadPDF()">Export to PDF</button>
