--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -5,7 +5,7 @@
   <div class="row">
  <div class="col-lg-4"> </div>
  <div class="col-lg-8">
-    <h4 class="mb-4 text-muted">Bienvenu sur SeneTransfert </h4>
+    <h4 class="mb-4 text-muted">Bienvenu sur Sen Transfert </h4>
     <div class="row">
       <div class="col-md-12 col-lg-6 mb-4 align-items-stretch">
 
