--- a/src/app/listepartenaire/listepartenaire.component.html
+++ b/src/app/listepartenaire/listepartenaire.component.html
@@ -37,7 +37,9 @@
 
           <ng-container matColumnDef="statut">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> statut </th>
-            <td mat-cell *matCellDef="let row"> <button (click)="blocker(row.id)" [ngClass]="{'btn btn-success': row.statut=='actif', 'btn btn-danger': row.statut=='bloquer'}"> {{row.statut}} </button> </td>
+            <td mat-cell *matCellDef="let row"> <button (click)="blocker(row.id)"
+               [ngClass]="{'btn btn-primary': row.statut=='actif',
+               'btn btn-danger': row.statut=='bloquer'}"> {{row.statut}} </button> </td>
           </ng-container>
 
           <!-- Color Column -->
