--- a/src/app/retrait/retrait.component.html
+++ b/src/app/retrait/retrait.component.html
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Rechercher un Code</label>
                     <input type="text" class="form-control  rounded" id="exampleFormControlInput1"
-                  (keyup)="onsubmit($event)"  placeholder="Rechercher un Code"   formControlName="code" name="code" >
+                   placeholder="Rechercher un Code"   formControlName="code" name="code" >
                   </div>
                   <div class="form-group">
                       <button type="submit" class="btn btn-lightning rounded mb-2 mr-2">Recherchez un Compte</button>
