changement du login page

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper default-theme">
     <app-navbar></app-navbar>
     <main>
-      <app-sidebar></app-sidebar> 
+      <app-sidebar></app-sidebar>
       <div class="pages container-fluid pt-4 pb-4 pl-4 pr-4 ">
 
 <div>
@@ -146,11 +146,11 @@
           <div class="card-footer">
             <div class="legend d-flex just">
               <div class="flex-fill text-center"><span class="d-inline-block rounded-circle mr-2"
-                  style="background: #5b6582;"></span><small>HTML</small></div>
+                  style="background: #5b6582;"></span><small>Envoie</small></div>
               <div class="flex-fill text-center"><span class="d-inline-block rounded-circle mr-2"
-                  style="background: #98a4c7;"></span><small>CSS</small></div>
+                  style="background: #98a4c7;"></span><small>Retrait</small></div>
               <div class="flex-fill text-center"><span class="d-inline-block rounded-circle mr-2"
-                  style="background: #36a2eb;"></span><small>Javascript</small></div>
+                  style="background: #36a2eb;"></span><small>Remboursement</small></div>
             </div>
 
           </div>
