--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -18,8 +18,10 @@
             </div>
             <div class="card-body">
 
+
+
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d204726.62177589769!2d2.9478446125294835!3d36.702058993866856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x128e521f646e1edb%3A0x35c0e93b4118c15d!2sAlgiers+Province!5e0!3m2!1sen!2sdz!4v1549829090260"
+                src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=InTouch%2Cdakar%2Csenegal+(Titre)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"
                 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
