--- a/src/app/userpartenaire/userpartenaire.component.html
+++ b/src/app/userpartenaire/userpartenaire.component.html
@@ -43,7 +43,9 @@
 
             <ng-container matColumnDef="statut">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> statut </th>
-              <td mat-cell *matCellDef="let row"><button class="btn btn-success" > {{row.statut}} </button> </td>
+              <td mat-cell *matCellDef="let row"><button (click)="blocker(row.id)"
+                [ngClass]="{ 'btn btn-primary': row.statut=='actif',
+                'btn btn-danger': row.statut=='bloquer'}"> {{row.statut}} </button> </td>
             </ng-container>
 
             <!-- Color Column -->
